# Projet-ldp

./: Ball.cpp  Ball.hpp  Block.cpp  Block.h  Block.hpp  Bonus.cpp  Bonus.h  Bonus.hpp  BonusCatch.cpp  BonusCatch.hpp  BonusInterrupt.cpp  BonusInterrupt.hpp  BonusSlow.cpp  BonusSlow.hpp  CMakeLists.txt  Capsule.cpp  Capsule.h  Drawable.cpp  Drawable.h  Laser.cpp  Laser.hpp  Level.cpp  Level.hpp  Makefile  Object.hpp  Paddle.cpp  Paddle.hpp  Point.cpp  Point.h  README.md  Score.cpp  Score.hpp  Size.h  arkanoid  ball  ball.cpp  ball.h  c_cpp_properties.json  color.h  devcontainer.json  (+10 more)
.devcontainer/: devcontainer.json
levels/: level1.lvl  level2.lvl  level3.lvl  test_level.lvl
object/: readme
src/: AllegroSystem.cpp  AllegroSystem.hpp  ArkanoidGame.cpp  ArkanoidGame.hpp  ancienmain.cpp  main.cpp  main2.cpp  setupAllegro.hpp  vraimain.cpp
src/controller/: CollisionController.cpp  CollisionController.hpp  GameContext.hpp  MovementController.cpp  MovementController.hpp  PaddleController.cpp  PaddleController.hpp
src/core/: setupAllegro.hpp
src/model/: Ball.cpp  Ball.hpp  Block.cpp  Block.hpp  Capsule.cpp  Capsule.hpp  GoldBlock.cpp  GoldBlock.hpp  Laser.cpp  Laser.hpp  Object  Object.hpp  Paddle.cpp  Paddle.hpp  Point.hpp  SilverBlock.cpp  SilverBlock.hpp  Size.hpp  Speed.hpp
src/utils/: Constants.hpp  Utils.cpp  Utils.hpp
src/view/: BallView.cpp  BallView.hpp  BlockView.cpp  BlockView.hpp  CapsuleView.cpp  CapsuleView.hpp  Drawable.hpp  GameView.hpp  LaserView.cpp  LaserView.hpp  PaddleView.cpp  PaddleView.hpp  Renderable.hpp  color.hpp  setupAllegro.cpp
(+60 files in other folders)
